drone/kubernetes/ingress-nginx/base/ingress-nginx.yaml

kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ci
  labels:
    app: ci
  # annotations:
spec:
  tls:
  - hosts:
    - git.t.khs1994.com
    - drone.t.khs1994.com
    - drone-kubenative.t.khs1994.com
    - drone-runner-kubernetes.t.khs1994.com
    - drone-runner-docker.t.khs1994.com
    - s3.t.khs1994.com
    secretName: ingress-nginx-tls-0.0.1
  rules:
  - host: git.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs
          servicePort: http
  - host: gitea.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: http
  - host: drone.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: http
  - host: drone-kubenative.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: drone-kubenative
          servicePort: http
  - host: drone-runner-kubernetes.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: drone-runner-kubernetes-dashboard
          servicePort: dashboard
  - host: drone-runner-docker.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: drone-runner-docker-dashboard
          servicePort: dashboard
  - host: s3.t.khs1994.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: http
